# libfixmath

./: .gitignore  CMakeLists.txt
include/libfixmath/: fix16.h  fix16.hpp  fix16_assert.h  fix16_options.h  fix16_trig_sin_lut.h  fixmath.h  fract32.h  int64.h  uint32.h
lib/fgl/: CMakeLists.txt
lib/fgl/src/: fgl_clip.c
src/: fix16.c  fix16_assert.c  fix16_exp.c  fix16_fft.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fract32.c  uint32.c
tests/: tests.cmake
utils/fixsingen/: main.c
utils/fixtest/: hiclock.c  hiclock.h  main.c
